# obj-rs

./: .travis.yml  404.html  COPYRIGHT  Cargo.toml  LICENSE-MIT  LICENSE.md  README.md  appveyor.yml
.github/workflows/: ci.yml  test.yml
benches/: bench.rs
examples/: glium.rs  no-normal.rs
examples/glium/: Cargo.toml
examples/glium/src/: main.rs
obj-rs/: Cargo.toml
obj-rs/src/: error.rs  lib.rs
obj-rs/src/raw/: lexer.rs  material.rs  mod.rs  object.rs
obj-rs/tests/: issue-34.rs  issue-50.rs  issue-63.rs  obj.rs  raw-basics.rs  raw-group.rs  raw-material.rs
obj-rs/tests/fixtures/: map_options.mtl
sampleapp/: Cargo.toml
sampleapp-vulkano/: Cargo.toml
sampleapp-vulkano/src/: main.rs
sampleapp/src/: main.rs
src/: error.rs  lex.rs  lib.rs  mtl.rs  obj.rs
src/raw/: lexer.rs  material.rs  mod.rs  object.rs  util.rs
tests/: mtl.rs  obj.rs  raw-basics.rs  raw-group.rs  raw-material.rs  raw-obj.rs
tests/fixtures/: cube.mtl  untitled.mtl
