[package]
name = "obj-rs"
version = "0.6.0"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
homepage = "https://github.com/simnalamburt/obj-rs"
repository = "https://github.com/simnalamburt/obj-rs"
documentation = "https://docs.rs/obj-rs/"
license = "Apache-2.0/MIT"
keywords = ["graphics", "obj", "WaveFront", "3D", "parser"]
readme = "README.md"
edition = "2018"

description = """
Wavefront obj parser for Rust. It handles both 'obj' and 'mtl' formats.
"""

[lib]
name = "obj"

[features]
glium-support = ["glium"]

[dependencies]
glium = { version = "0.26.0", default-features = false, optional = true }
vec_map = "0.6.0"
serde = "1.0"
serde_derive = "1.0"
num = "0.2.0"


[[example]]
name = "glium"

[dev_dependencies]
glium = "0.26.0"

[[example]]
name = "no-normal"
