[workspace]
members = [
    "obj-rs",
    "sampleapp",
    "sampleapp-vulkano"
]
default-members = ["obj-rs"]
resolver = "3"

[workspace.package]
authors = [
    "Jihyeon Kim <simnalamburt@gmail.com>",
    "Govind Venkatesh <venakteshgovind1@gmail.com>",
]
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/simnalamburt/obj-rs"
