[package]
name = "obj-rs"
version = "0.7.2"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
edition = "2021"

description = """
Wavefront obj parser for Rust. It handles both 'obj' and 'mtl' formats.
"""

documentation = "https://docs.rs/obj-rs/"
readme = "README.md"
homepage = "https://github.com/simnalamburt/obj-rs"
repository = "https://github.com/simnalamburt/obj-rs"
license = "Apache-2.0 OR MIT"
keywords = ["graphics", "obj", "WaveFront", "3D", "parser"]
categories = ["parsing", "rendering::data-formats"]

[lib]
name = "obj"


[features]
default = ["serde"]

serde = ["dep:serde"]
glium = ["dep:glium"]
vulkano = ["dep:vulkano", "dep:bytemuck"]

# This feature is kept for backwards compatibility. Use feature "glium" instead.
glium-support = ["glium"]

[dependencies]
num-traits = "0.2.11"

# Optional serde support (on by default)
serde = { version = "1.0", features = ["derive"], optional = true }

# Optional glium support
glium = { version = ">=0.26.0, <0.36.0", default-features = false, optional = true }

# Optional vulkano support
vulkano = { version = ">=0.19.0, <0.33.0", optional = true }
bytemuck = { version = "1", optional = true }
