[package]
name = "obj-rs"
version = "0.7.4"
description = "Wavefront obj parser for Rust. It handles both 'obj' and 'mtl' formats."
keywords = ["graphics", "obj", "WaveFront", "3D", "parser"]
categories = ["parsing", "rendering::data-formats"]

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "obj"

[features]
default = ["serde"]

serde = ["dep:serde"]
glium = ["dep:glium"]
vulkano = ["dep:vulkano", "dep:bytemuck"]

# This feature is kept for backwards compatibility. Use feature "glium" instead.
glium-support = ["glium"]

[dependencies]
num-traits = "0.2.11"

# Optional serde support (on by default)
serde = { version = "1.0", features = ["derive"], optional = true }

# Optional glium support
glium = { version = ">=0.26.0, <0.37.0", default-features = false, optional = true }

# Optional vulkano support
vulkano = { version = ">=0.19.0, <0.34.0", optional = true }
bytemuck = { version = "1", optional = true }
