[package]
name = "sampleapp-vulkano"
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.34"
vulkano-shaders = "0.34"
winit = "0.28"
nalgebra = "0.32"

obj-rs = { path = "../obj-rs", default-features = false, features = ["vulkano"] }
