[package]
name = "sampleapp-vulkano"
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.35"
vulkano-shaders = "0.35"
winit = "0.30"
nalgebra = { version = "0.33", default-features = false, features = ["std"] }

obj-rs = { path = "../obj-rs", default-features = false, features = ["vulkano"] }
