[package]
name = "sampleapp"
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.36"

obj-rs = { path = "../obj-rs", default-features = false, features = ["glium"] }
